# bachelor_compiler_course

./: .gitmodules  README.md  game_of_life.ll
IR/: game_life.ll  main.ll
IR_gen/: CMakeLists.txt  driver.hh  interp.hh  main.cc  transltr.cc  transltr.hh
glang/: CMakeLists.txt  glang
glang/cmake/: print.cmake
glang/include/compiler/: builder.hh  node.hh
glang/include/driver/: driver.hh
glang/include/parser/: parser.hh
glang/lang/: CMakeLists.txt  main.cc
glang/lang/glang/: CMakeLists.txt  lib.cc  lib.hh  main.cc
glang/src/: CMakeLists.txt
glang/src/compiler/: CMakeLists.txt  builder.cc  node.cc
glang/src/driver/: CMakeLists.txt  driver.cc
glang/src/grammar/: CMakeLists.txt  grammar.y  lex.l
glang/src/parser/: CMakeLists.txt  parser.cc
glang/tests/: break.gl  double_if.gl  fact.gl  func.gl  game_life.gl  if.gl  print.gl  window_create.gl
